@@ -111,7 +111,7 @@
        =========================================================== -->
   <modules>
     <module>sis-webapp</module>
-    <module>sis-app</module>
+    <module>sis-console</module>
   </modules>
 
 </project>
